# x11spice

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
doc/: analysis.x11vnc.scan.txt  spice_indent
src/: Makefile.am  agent.c  agent.h  auto.c  auto.h  display.c  display.h  gui.c  gui.h  listen.c  listen.h  local_spice.h  main.c  options.c  options.h  scan.c  scan.h  session.c  session.h  spice.c  x11spice.1  x11spice.h  x11spice_connected_gnome  x11spice_disconnected_gnome
src/data/: x11spice.1  x11spice.desktop  x11spice.spec
src/dev/: .gitignore  dummy.xorg.conf  run
src/tests/: Makefile.am  expected.grid.1024.768.ppm  expected.grid.1280x1024.ppm  expected.grid.640x480.ppm  expected.grid.800x600.ppm  gui.supp  main.c  options.supp  tests.c  tests.h  util.c  util.h  x11perf1  x11spice_test.c  x11spice_test.h  xcb.c  xcb.h  xdummy.c  xdummy.h
src/util/: .gitignore  run
src/xdg/x11spice/: x11spice.conf
